test/tests/compiler/18_structures/invalid_types/extra_credit/union_tag_resolution/union_wrong_member.plx
type union u(    a: i32    )

pub fn main(none) i32 {
    foo: union u = $(true)

    #  introduce a different union u type
    type union u(        b: i32        
        )
    

    return foo.b #  foo belongs to outer union u type, which doesn't have member 'b'
}
